--- a/.github/workflows/deploy-dev-v3.yml
+++ b/.github/workflows/deploy-dev-v3.yml
@@ -3,7 +3,7 @@ name: Deploy to DEV v3
 on:
   workflow_dispatch:
   pull_request:
-    branches: ['develop', 'v3-staging']
+    branches: ['develop']
     types:
       - closed
 
@@ -15,7 +15,7 @@ jobs:
   deploy-tag:
     name: Deploy to DEV v3
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v') || startsWith(github.ref, 'refs/heads/v3-staging') || startsWith(github.ref, 'refs/heads/v3-hotfix/') || startsWith(github.ref, 'refs/heads/develop/') || github.event.pull_request.merged == true
+    if: startsWith(github.ref, 'refs/tags/v') || startsWith(github.ref, 'refs/heads/v3-hotfix/') || startsWith(github.ref, 'refs/heads/develop/') || github.event.pull_request.merged == true
     steps:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
@@ -35,8 +35,10 @@ jobs:
       - name: Install dependencies
         env:
           HUSKY: 0
+          REMOTE_MODULES_BASE_PATH: 'https://cdn.rudderlabs.com/dev/latest/v3/modern/plugins'
+          BUGSNAG_API_KEY: ${{ secrets.RS_DEV_BUGSNAG_API_KEY }}
+          BUGSNAG_RELEASE_STAGE: 'development'
         run: |
-          npm ci --no-audit
           npm run setup:ci
 
       - name: Build files
