--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "lerna:version": "lerna version --exact --conventional-commits --no-push -y",
     "lerna:publish": "lerna publish from-package --no-private -y --create-release github",
     "bump-version:monorepo": "npm version minor --git-tag-version false",
-    "setup": "npx lerna bootstrap && lerna run build:package && lerna link",
-    "setup:ci": "lerna bootstrap && lerna run build:package && lerna link",
+    "setup": "npx lerna@6 bootstrap && lerna link",
+    "setup:ci": "npx lerna@6 bootstrap --ci && lerna link",
     "clean": "lerna clean --yes && lerna run --concurrency 1 clean && git clean -xdf node_modules",
     "clean:cache": "lerna clean --yes && rimraf -rf ./node_modules/.cache",
     "start": "lerna run start --scope \"@rudderstack/analytics-js\" --scope \"@rudderstack/analytics-js-plugins\"",
