--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,16 +20,16 @@ sonar.eslint.reportPaths=reports/eslint.json
 # Path to sources
 sonar.sources=src,packages
 sonar.inclusions=**/*.js
-sonar.exclusions=**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,src/integrations/**/nativeSdkLoader.js,src/assets/**/*
+sonar.exclusions=**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,src/integrations/**/nativeSdkLoader.js,assets/**/*
 
 # Path to tests
 sonar.tests=__tests__
 sonar.test.inclusions=**/*.test.js
 sonar.test.exclusions=**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg
-sonar.coverage.exclusions=test/**/*,__tests__/**/*,__mocks__/**/*,examples/**/*,sanity-suite/**/*,**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,src/integrations/**/nativeSdkLoader.js,src/assets/**/*
+sonar.coverage.exclusions=test/**/*,__tests__/**/*,__mocks__/**/*,examples/**/*,sanity-suite/**/*,**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,src/integrations/**/nativeSdkLoader.js,assets/**/*
 
 # Source encoding
 sonar.sourceEncoding=UTF-8
 
 # Exclusions for copy-paste detection
-sonar.cpd.exclusions=test/**/*,__tests__/**/*,__mocks__/**/*,examples/**/*,sanity-suite/**/*,src/integrations/**/nativeSdkLoader.js,src/assets/**/*
+sonar.cpd.exclusions=test/**/*,__tests__/**/*,__mocks__/**/*,examples/**/*,sanity-suite/**/*,src/integrations/**/nativeSdkLoader.js,assets/**/*
