feat: configurable storage type (#1258)
* feat: configurable storage type

* chore: resolve cyclic dependency

* chore: fix or condition syntax

Co-authored-by: Sai Kumar Battinoju <88789928+saikumarrs@users.noreply.github.com>

* chore: pr comment adressed

* chore: resolve merge conflicts

* chore: refactor code

* chore: addressed pr comments

* chore: addressed pr comments

---------

Co-authored-by: Moumita Mandal <moumita@Moumitas-MacBook-Pro-2.local>
Co-authored-by: Sai Kumar Battinoju <88789928+saikumarrs@users.noreply.github.com>

--- a/packages/sanity-suite/package.json
+++ b/packages/sanity-suite/package.json
@@ -35,11 +35,13 @@
     "start:cdn:v1.1": "DEV_SERVER=true npm run build:cdn:v1.1 -- --watch",
     "start:cdn:v1": "DEV_SERVER=true npm run build:cdn:v1 -- --watch",
     "start:cdn:v3": "DEV_SERVER=true npm run build:cdn:v3 -- --watch",
+    "start:local:v3": "DEV_SERVER=true npm run build:local:v3 -- --watch",
     "start:npm": "DEV_SERVER=true npm run build:npm -- --watch",
     "build:cdn": "rollup -c --environment TEST_PACKAGE:cdn",
     "build:cdn:v1.1": "rollup -c --environment TEST_PACKAGE:cdn,CDN_VERSION_PATH:v1.1",
     "build:cdn:v1": "rollup -c --environment TEST_PACKAGE:cdn,CDN_VERSION_PATH:v1",
     "build:cdn:v3": "rollup -c --environment TEST_PACKAGE:cdn,CDN_VERSION_PATH:v3",
+    "build:local:v3": "rollup -c --environment TEST_PACKAGE:local,CDN_VERSION_PATH:v3",
     "build:npm:v1.1": "CDN_VERSION_PATH=v1.1 npm run build:npm",
     "build:npm:v3": "CDN_VERSION_PATH=v3 npm run build:npm",
     "build:cdn:v1.1:staging": "rollup -c --environment TEST_PACKAGE:cdn,CDN_VERSION_PATH:v1.1,STAGING:true",
