--- a/.github/workflows/rollback-v3.yml
+++ b/.github/workflows/rollback-v3.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           npm run setup:ci
 
-      - name: Build and sync files to S3
+      - name: Build release artifacts
         env:
           REMOTE_MODULES_BASE_PATH: 'https://cdn.rudderlabs.com/${{ env.CURRENT_VERSION_VALUE }}/modern/plugins'
           BUGSNAG_API_KEY: ${{ secrets.RS_PROD_BUGSNAG_API_KEY }}
