--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@rudderstack/analytics-js-monorepo",
   "version": "3.0.0",
   "private": true,
-  "description": "",
+  "description": "Monorepo accommodating Rudderstack Analytics JS SDK",
   "workspaces": [
     "packages/*"
   ],
@@ -56,7 +56,7 @@
   "bugs": {
     "url": "https://github.com/rudderlabs/rudder-sdk-js/issues"
   },
-  "homepage": "https://github.com/rudderlabs/rudder-sdk-js#readme",
+  "homepage": "https://github.com/rudderlabs/rudder-sdk-js/blob/main/#readme",
   "repository": {
     "type": "git",
     "url": "https://github.com/rudderlabs/rudder-sdk-js.git"
