--- a/packages/sanity-suite/package.json
+++ b/packages/sanity-suite/package.json
@@ -3,7 +3,7 @@
   "version": "2.40.0",
   "private": true,
   "description": "Sanity suite for testing JS SDK package",
-  "main": "./dist/testBook.js",
+  "main": "./dist/cdn/v3/testBook.js",
   "scripts": {
     "clean": "rimraf -rf ./dist && rimraf -rf ./node_modules/.cache && rimraf tsconfig.tsbuildinfo && rimraf -rf ./reports",
     "start": "npm run build:v1.1 && npm run build:v3 && npm run start:local",
