ci: update v3 github actions

--- a/.github/workflows/deploy-prod-v3.yml
+++ b/.github/workflows/deploy-prod-v3.yml
@@ -149,34 +149,34 @@ jobs:
               ]
             }
 
-      - name: Send message to Slack channel
-        id: slack
-        uses: slackapi/slack-github-action@v1.24.0
-        env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-          PROJECT_NAME: 'JS SDK v1.1 Browser Package'
-          CDN_URL: 'https://cdn.rudderlabs.com/v1.1/rudder-analytics.min.js'
-        with:
-          channel-id: ${{ secrets.SLACK_RELEASE_CHANNEL_ID }}
-          payload: |
-            {
-              "blocks": [
-                {
-                  "type": "header",
-                  "text": {
-                    "type": "plain_text",
-                    "text": "New release: ${{ env.PROJECT_NAME }}"
-                  }
-                },
-                {
-                  "type": "divider"
-                },
-                {
-                  "type": "section",
-                  "text": {
-                    "type": "mrkdwn",
-                    "text": "*Release: <${{ env.CDN_URL }}|${{ env.CURRENT_VERSION_VALUE }}>*\n${{ env.DATE }}"
-                  }
-                }
-              ]
-            }
+#      - name: Send message to Slack channel
+#        id: slack
+#        uses: slackapi/slack-github-action@v1.24.0
+#        env:
+#          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+#          PROJECT_NAME: 'JS SDK v1.1 Browser Package'
+#          CDN_URL: 'https://cdn.rudderlabs.com/v1.1/rudder-analytics.min.js'
+#        with:
+#          channel-id: ${{ secrets.SLACK_RELEASE_CHANNEL_ID }}
+#          payload: |
+#            {
+#              "blocks": [
+#                {
+#                  "type": "header",
+#                  "text": {
+#                    "type": "plain_text",
+#                    "text": "New release: ${{ env.PROJECT_NAME }}"
+#                  }
+#                },
+#                {
+#                  "type": "divider"
+#                },
+#                {
+#                  "type": "section",
+#                  "text": {
+#                    "type": "mrkdwn",
+#                    "text": "*Release: <${{ env.CDN_URL }}|${{ env.CURRENT_VERSION_VALUE }}>*\n${{ env.DATE }}"
+#                  }
+#                }
+#              ]
+#            }
