--- a/packages/sanity-suite/package.json
+++ b/packages/sanity-suite/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rudderstack/analytics-js-sanity-suite",
-  "version": "2.40.0",
+  "version": "3.0.0-beta.1",
   "private": true,
   "description": "Sanity suite for testing JS SDK package",
   "main": "./dist/cdn/v3/testBook.js",
@@ -53,7 +53,7 @@
   "author": "RudderStack",
   "license": "MIT",
   "dependencies": {
-    "@rudderstack/analytics-js": "^3.0.0",
+    "@rudderstack/analytics-js": "^3.0.0-beta.1",
     "deep-object-diff": "1.1.9",
     "object-path": "0.11.8",
     "rudder-sdk-js": "^2.40.0"
