chore(monorepo): bump version as prerelease on draft release action

--- a/.github/workflows/draft-new-release-v3.yml
+++ b/.github/workflows/draft-new-release-v3.yml
@@ -79,6 +79,8 @@ jobs:
           npm run bump-version:monorepo
           npx replace $CURRENT_VERSION_VALUE $NEW_VERSION_VALUE sonar-project.properties
           git add sonar-project.properties
+          git add package-lock.json
+          git add package.json
           git commit -m "chore: sync versions and generate release logs" -n
 
       - name: Push new version in release branch
