--- a/.github/workflows/deploy-prod-v3.yml
+++ b/.github/workflows/deploy-prod-v3.yml
@@ -143,7 +143,7 @@ jobs:
             }
 
 #      - name: Send message to Slack channel
-#        id: slack
+#        id: slackv1
 #        uses: slackapi/slack-github-action@v1.24.0
 #        env:
 #          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
