--- a/.github/workflows/deploy-npm-v3.yml
+++ b/.github/workflows/deploy-npm-v3.yml
@@ -54,7 +54,7 @@ jobs:
           BUGSNAG_RELEASE_STAGE: 'production'
         run: |
           npm set //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
-          lerna publish from-package --no-private --contents dist/npm
+          lerna@6 publish from-package --no-private --contents dist/npm
 
       - name: Send message to Slack channel for v3
         id: slack
