--- a/packages/sanity-suite/package.json
+++ b/packages/sanity-suite/package.json
@@ -31,12 +31,14 @@
     "release": "exit 0",
     "start:integrations": "npm run clean && mkdir dist && mkdir dist/local && npm run build:v1.1 && npm run build:integrations && rsync -r ../analytics-js-integrations/dist/cdn/legacy/js-integrations dist/local && npm run start:local",
     "start:local": "DEV_SERVER=true npm run build -- --watch",
+    "start:local:v3": "DEV_SERVER=true npm run build:local:v3 -- --watch",
     "start:cdn": "DEV_SERVER=true npm run build:cdn -- --watch",
     "start:cdn:v1.1": "DEV_SERVER=true npm run build:cdn:v1.1 -- --watch",
     "start:cdn:v1": "DEV_SERVER=true npm run build:cdn:v1 -- --watch",
     "start:cdn:v3": "DEV_SERVER=true npm run build:cdn:v3 -- --watch",
-    "start:local:v3": "DEV_SERVER=true npm run build:local:v3 -- --watch",
     "start:npm": "DEV_SERVER=true npm run build:npm -- --watch",
+    "start:npm:v1.1": "DEV_SERVER=true npm run build:npm:v1.1 -- --watch",
+    "start:npm:v3": "DEV_SERVER=true npm run build:npm:v3 -- --watch",
     "build:cdn": "rollup -c --environment TEST_PACKAGE:cdn",
     "build:cdn:v1.1": "rollup -c --environment TEST_PACKAGE:cdn,CDN_VERSION_PATH:v1.1",
     "build:cdn:v1": "rollup -c --environment TEST_PACKAGE:cdn,CDN_VERSION_PATH:v1",
