--- a/.prettierignore
+++ b/.prettierignore
@@ -9,4 +9,5 @@ CONTRIBUTING.md
 
 examples/chrome-extension/background-script/rudderAnalytics.js
 examples/chrome-extension/background-script-websockets/rudderAnalytics.js
-examples/chrome-extension/content-script/foreground.js
+examples/chrome-extension/content-script-v1.1/foreground.js
+examples/chrome-extension/content-script-v3/foreground.js
