chore: enable workflows for hotfix prs

--- a/.github/workflows/check_pr_title.yml
+++ b/.github/workflows/check_pr_title.yml
@@ -2,7 +2,7 @@ name: Check PR title
 
 on:
   pull_request:
-    branches: ['production', 'production-staging']
+    branches: ['production', 'production-staging', 'hotfix/*']
     types: ['opened', 'reopened', 'edited', 'synchronize']
 
 jobs:
