--- a/.github/workflows/build-and-quality-checks.yml
+++ b/.github/workflows/build-and-quality-checks.yml
@@ -2,7 +2,7 @@ name: Build & Code Quality Checks
 
 on:
   pull_request:
-    branches: ['production', 'production-staging']
+    branches: ['production', 'production-staging', 'hotfix/*']
     types: ['opened', 'reopened', 'synchronize']
 
 jobs:
