fix(analytics-js): update context page details when url/popstate changes

--- a/nx.json
+++ b/nx.json
@@ -9,7 +9,8 @@
           "build:npm",
           "build:npm:modern",
           "test",
-          "check:size:build"
+          "check:size:build",
+          "check:size"
         ]
       }
     }
