--- a/.github/workflows/rollback-v3.yml
+++ b/.github/workflows/rollback-v3.yml
@@ -146,7 +146,7 @@ jobs:
             }
 
       - name: Send message to Slack channel
-        id: slack
+        id: slack-v1dot1
         uses: slackapi/slack-github-action@v1.24.0
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
