Added page for  Data Residency

--- a/packages/loading-scripts/.env.example
+++ b/packages/loading-scripts/.env.example
@@ -8,3 +8,4 @@ BUGSNAG_RELEASE_STAGE=
 CDN_VERSION_PATH=v1.1
 FEATURE_PRELOAD_BUFFER_WRITE_KEY=
 FEATURE_EVENT_FILTERING_WRITE_KEY=
+FEATURE_DATA_RESIDENCY_WRITE_KEY=
