--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "@segment/top-domain": "3.0.1",
     "@vespaiach/axios-fetch-adapter": "0.3.1",
     "axios": "0.27.2",
-    "axios-retry": "3.6.0",
+    "axios-retry": "3.7.0",
     "component-each": "0.2.6",
     "component-emitter": "1.3.0",
     "component-querystring": "2.0.1",
@@ -103,8 +103,8 @@
     "uuid": "8.3.2"
   },
   "devDependencies": {
-    "@babel/core": "7.22.10",
-    "@babel/eslint-parser": "7.22.10",
+    "@babel/core": "7.22.11",
+    "@babel/eslint-parser": "7.22.11",
     "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/plugin-proposal-private-methods": "7.18.6",
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
@@ -112,31 +112,31 @@
     "@babel/plugin-transform-object-assign": "7.22.5",
     "@babel/plugin-transform-runtime": "7.22.10",
     "@babel/preset-env": "7.22.10",
-    "@babel/preset-typescript": "7.22.5",
+    "@babel/preset-typescript": "7.22.11",
     "@commitlint/config-conventional": "17.7.0",
     "@commitlint/config-lerna-scopes": "17.7.0",
     "@digitalroute/cz-conventional-changelog-for-jira": "8.0.1",
-    "@jscutlery/semver": "2.30.1",
-    "@nx/eslint-plugin": "16.7.1",
-    "@nx/jest": "^16.7.1",
-    "@nx/js": "16.7.1",
-    "@nx/workspace": "16.7.1",
+    "@jscutlery/semver": "3.1.0",
+    "@nx/eslint-plugin": "16.7.4",
+    "@nx/jest": "16.7.4",
+    "@nx/js": "16.7.4",
+    "@nx/workspace": "16.7.4",
     "@originjs/vite-plugin-federation": "1.2.3",
     "@rollup/plugin-alias": "5.0.0",
     "@rollup/plugin-babel": "6.0.3",
     "@rollup/plugin-commonjs": "25.0.4",
     "@rollup/plugin-json": "6.0.0",
-    "@rollup/plugin-node-resolve": "15.1.0",
+    "@rollup/plugin-node-resolve": "15.2.1",
     "@rollup/plugin-replace": "5.0.2",
     "@rollup/plugin-terser": "0.4.3",
     "@size-limit/file": "8.2.6",
     "@size-limit/webpack": "8.2.6",
     "@types/component-emitter": "1.2.11",
     "@types/crypto-js": "4.1.1",
-    "@types/jest": "29.5.3",
+    "@types/jest": "29.5.4",
     "@types/lodash.clonedeep": "4.5.7",
     "@types/lodash.isstring": "4.0.7",
-    "@types/node": "16.11.7",
+    "@types/node": "18.17.12",
     "@types/ramda": "0.29.3",
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.62.0",
@@ -146,34 +146,34 @@
     "babel-plugin-transform-object-hasown": "1.1.0",
     "commitizen": "4.3.0",
     "commitlint": "17.7.1",
-    "core-js": "3.32.0",
+    "core-js": "3.32.1",
     "dotenv": "16.3.1",
-    "eslint": "8.47.0",
+    "eslint": "8.48.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "17.1.0",
     "eslint-config-prettier": "8.10.0",
     "eslint-import-resolver-typescript": "3.6.0",
     "eslint-plugin-compat": "4.1.4",
-    "eslint-plugin-import": "2.28.0",
-    "eslint-plugin-sonarjs": "0.20.0",
+    "eslint-plugin-import": "2.28.1",
+    "eslint-plugin-sonarjs": "0.21.0",
     "eslint-plugin-unicorn": "48.0.1",
     "esm": "3.2.25",
     "http-server": "14.1.1",
     "husky": "8.0.3",
     "isomorphic-fetch": "3.0.0",
-    "jest": "29.6.2",
+    "jest": "29.6.4",
     "jest-date-mock": "1.0.8",
-    "jest-environment-jsdom": "29.6.2",
+    "jest-environment-jsdom": "29.6.4",
     "jest-junit": "16.0.0",
     "jest-sonar": "0.2.16",
     "jest-watch-typeahead": "2.2.2",
     "jscpd": "3.5.9",
     "lerna": "7.1.5",
-    "lint-staged": "14.0.0",
+    "lint-staged": "14.0.1",
     "madge": "6.1.0",
-    "msw": "1.2.3",
-    "nx": "16.7.0",
+    "msw": "1.2.5",
+    "nx": "16.7.4",
     "patch-package": "8.0.0",
     "prettier": "3.0.2",
     "rollup": "3.20.2",
@@ -193,7 +193,7 @@
     "standard-version": "9.5.0",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
-    "tslib": "2.6.1",
+    "tslib": "2.6.2",
     "typescript": "5.1.6",
     "user-agent-data-types": "0.3.1"
   },
