ci(monorepo): remove lerna, use nx for version and release

--- a/.github/workflows/build-and-quality-checks-v3.yml
+++ b/.github/workflows/build-and-quality-checks-v3.yml
@@ -42,6 +42,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           install_script: setup:ci
-          build_script: check:size:build'
+          build_script: check:size:build
           script: nx run-many -t check:size:json --parallel=false --all --exclude=@rudderstack/analytics-js-sanity-suite,@rudderstack/analytics-js-loading-scripts
           is_monorepo: true
