--- a/package.json
+++ b/package.json
@@ -7,15 +7,12 @@
     "packages/*"
   ],
   "scripts": {
-    "lerna:version": "lerna version --exact --conventional-commits --no-push -y",
-    "lerna:publish": "lerna publish from-package --no-private -y --create-release github",
-    "bump-version:monorepo": "npm version prerelease --git-tag-version false",
     "setup": "npm i",
     "setup:ci": "npm ci",
     "clean": "nx run-many -t clean & git clean -xdf node_modules && nx reset",
     "clean:cache": "rimraf -rf ./node_modules/.cache",
-    "start": "lerna run start --scope \"@rudderstack/analytics-js\" --scope \"@rudderstack/analytics-js-plugins\"",
-    "start:modern": "lerna run start:modern --scope \"@rudderstack/analytics-js\" --scope \"@rudderstack/analytics-js-plugins\"",
+    "start": "nx run-many --targets=start --parallel=3 --projects=@rudderstack/analytics-js-integrations,@rudderstack/analytics-js-plugins,@rudderstack/analytics-js",
+    "start:modern": "nx run-many --targets=start-modern --parallel=3 --projects=@rudderstack/analytics-js-integrations,@rudderstack/analytics-js-plugins,@rudderstack/analytics-js",
     "build": "nx run-many -t build --parallel=false",
     "build:browser": "nx run-many -t build-browser --parallel=false",
     "build:browser:modern": "nx run-many -t build-browser-modern --parallel=false",
@@ -42,13 +39,15 @@
     "pre-commit": "npm run test && npm run check:size:build && npm run check:size:json && npx lint-staged",
     "commit-msg": "commitlint --edit",
     "commit": "git-cz",
-    "release": "echo 'TODO: Use NX for this' && exit 0",
-    "release:github": "echo 'TODO: Use NX for this' && exit 0",
     "postinstall": "patch-package",
     "build:integrations": "nx run-many --targets=build-browser,build-browser-modern --parallel=false --projects=@rudderstack/analytics-js-integrations",
     "build:v3": "nx run-many -t build --parallel=false --exclude=rudder-sdk-js,@rudderstack/analytics-js-sanity-suite,@rudderstack/analytics-js-integrations",
     "build:v1.1": "nx run-many -t build --parallel=false --projects=rudder-sdk-js",
-    "build:sanity": "rm -rf packages/sanity-suite/dist && nx run-many --targets=build:all,build:all:staging --parallel=false --projects=@rudderstack/analytics-js-sanity-suite"
+    "build:sanity": "rm -rf packages/sanity-suite/dist && nx run-many --targets=build:all,build:all:staging --parallel=false --projects=@rudderstack/analytics-js-sanity-suite",
+    "bump-version:monorepo": "npm version prerelease --git-tag-version false",
+    "release": "nx affected --base=origin/main --target=version --parallel=1 --skipCommitTypes=docs,ci,chore",
+    "release:github": "nx affected --target=github --parallel=1 --skipCommitTypes=docs,ci,chore",
+    "deploy:npm": "nx affected --target=deploy --parallel=1 --skipCommitTypes=docs,ci,chore"
   },
   "author": "RudderStack",
   "license": "MIT",
@@ -168,7 +167,6 @@
     "jest-sonar": "0.2.16",
     "jest-watch-typeahead": "2.2.2",
     "jscpd": "3.5.9",
-    "lerna": "7.1.5",
     "lint-staged": "14.0.1",
     "madge": "6.1.0",
     "msw": "1.2.5",
@@ -205,7 +203,6 @@
     "gh-got": "9.0.0",
     "git-semver-tags": "4.1.1",
     "http-cache-semantics": "4.1.1",
-    "lerna": "7.1.5",
     "semver-regex": "3.1.4",
     "trim-newlines": "3.0.1",
     "webpack": "5.76.0",
