--- a/packages/analytics-js/package.json
+++ b/packages/analytics-js/package.json
@@ -16,13 +16,7 @@
       "import": "./legacy/esm/index.js"
     }
   },
-  "typesVersions": {
-    "*": {
-      ".": [
-        "index.d.ts"
-      ]
-    }
-  },
+  "types": "./index.d.ts",
   "publishConfig": {
     "directory": "dist/npm",
     "access": "public"
