--- a/.github/workflows/build-and-quality-checks-v3.yml
+++ b/.github/workflows/build-and-quality-checks-v3.yml
@@ -2,7 +2,7 @@ name: Build & Code Quality Checks v3
 
 on:
   pull_request:
-    branches: ['develop', 'main', 'hotfix/*']
+    branches: ['develop', 'main', 'v3-hotfix/*']
     types: ['opened', 'reopened', 'synchronize']
 
 jobs:
