--- a/.github/workflows/test-v3.yml
+++ b/.github/workflows/test-v3.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches: ['main', 'develop']
   pull_request:
-    branches: ['main', 'develop', 'hotfix/*']
+    branches: ['main', 'develop', 'v3-hotfix/*']
     types: ['opened', 'reopened', 'synchronize']
 
 jobs:
