--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "check:lint:dev": "nx run-many -t check:lint:dev --parallel=false --verbose",
     "check:size": "nx run-many -t check:size --parallel=false --verbose",
     "check:size:build": "nx run-many -t build-check-size",
-    "check:size:json": "nx run-many -t check:size:json --parallel=false --verbose",
+    "check:size:json": "npm run check:size:json:ci -- --verbose",
+    "check:size:json:ci": "nx run-many -t check:size:json --parallel=false",
     "check:circular": "nx run-many -t check:circular --parallel=false --verbose",
     "check:support": "NODE_ENV=production npx browserslist --mobile-to-desktop",
     "check:support:modern": "NODE_ENV=modern npx browserslist --mobile-to-desktop",
